# ECN-SOFAR

./: .gitignore  README.md
baxter_puppet_arm/: CMakeLists.txt  package.xml
baxter_puppet_arm/src/: slave_arm_node.cpp  slave_arm_node_velocity.cpp
baxter_puppet_arm_2/: CMakeLists.txt  package.xml
baxter_puppet_arm_2/launch/: lab3.launch
baxter_puppet_arm_2/src/: left_arm_mover.cpp  target_pose_broadcaster.cpp
