<?xml version="1.0"?>
<package>
  <name>baxter_puppet_arm</name>
  <version>0.0.0</version>
  <description>baxter_puppet_arm package</description>

  <maintainer email="minh-quan.dao@eleves.ec-nantes.fr">mqdao</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>baxter_core_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  
</package>
